--- a/about.html
+++ b/about.html
@@ -7,10 +7,11 @@
         <title>Laurel Highlands Presbyterian Church</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     </head>
 
     <body>
-        <div class="container">
+        <div class="container-fluid">
               <div class="jumbotron">
             <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
             </div>
