--- a/contact-us.html
+++ b/contact-us.html
@@ -7,12 +7,15 @@
         <title>Laurel Highlands Presbyterian Church</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     </head>
 
     <body>
-        <div class="container">
+        <div class="container-fluid">
+            <div class="row">
             <div class="jumbotron">
                 <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
+            </div>
             </div>
             <nav>
                 <ul class="nav nav-tabs">
@@ -39,7 +42,7 @@
                 <h3>We are located at:</h3>
                 <p>140 Bovard Road (PO Box 53)</p>
                 <p>Bovard, PA 15619</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3042.17061361474!2d-79.51108068460712!3d40.31637087937693!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8834d1d690de20ef%3A0x20ed26e277605d5f!2sLaurel+Highlands+Presbyterian!5e0!3m2!1sen!2sus!4v1487130646358" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7601.458141925898!2d-79.50877985736332!3d40.31610890449267!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x20ed26e277605d5f!2sLaurel+Highlands+Presbyterian!5e0!3m2!1sen!2sus!4v1487166079276" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                 </div>
             </section>
