Adjusted nav and grid

--- a/about.html
+++ b/about.html
@@ -12,18 +12,24 @@
 
     <body>
         <div class="container-fluid">
-              <div class="jumbotron">
-            <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
-            </div>
-            <nav>
-                <ul class="nav nav-tabs">
-                    <li role="presentation"><a href="index.html">Home</a></li>
-                    <li role="presentation" class="active"><a href="about.html">About Us</a></li>
-                    <li role="presentation"><a href="news.html">News and Events</a></li>
-                    <li role="presentation"><a href="contact-us.html">Contact Us</a></li>
-                </ul>
+             <header id="header" class="wrapper">
+            <div id="header-inner" class="inner">
+                <nav id="main-nav">
+                    <a href="index.html" class="main-nav-link">Home</a>
+                    <a href="about.html" class="main-nav-link">About Us</a>
+                    <a href="news.html" class="main-nav-link">News and Events</a>
+                    <a href="contact-us.html" class="main-nav-link">Contact Us</a>
             </nav>
-                <h2>About Us</h2>
+           
+            </div>
+            </header>
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
+                </div>
+            </div>
+              <div class="content-b"> 
+                <h2>About Us</h2> 
                 <section class="about-pca">
                 <p>Laurel Highlands Presbyterian Church is a congregation of the
 Presbyterian Church in America.</p>
@@ -44,6 +50,7 @@ Presbyterian Church in America.</p>
                     <p>Worship begins at 10:45 a.m.</p>
                     <p>Nursery is provided for children through age three.</p>
                 </section>
+                </div>
             </div>
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
     </body>
