--- a/contact-us.html
+++ b/contact-us.html
@@ -12,19 +12,23 @@
 
     <body>
         <div class="container-fluid">
-            <div class="row">
-            <div class="jumbotron">
-                <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
-            </div>
-            </div>
-            <nav>
-                <ul class="nav nav-tabs">
-                    <li role="presentation"><a href="index.html">Home</a></li>
-                    <li role="presentation"><a href="about.html">About Us</a></li>
-                    <li role="presentation"><a href="news.html">News and Events</a></li>
-                    <li role="presentation" class="active"><a href="contact-us.html">Contact Us</a></li>
-                </ul>
+         <div class="row">
+           <header id="header" class="wrapper">
+            <div id="header-inner" class="inner">
+                <nav id="main-nav">
+                    <a href="index.html" class="main-nav-link">Home</a>
+                    <a href="about.html" class="main-nav-link">About Us</a>
+                    <a href="news.html" class="main-nav-link">News and Events</a>
+                    <a href="contact-us.html" class="main-nav-link">Contact Us</a>
             </nav>
+             </div>
+            </div>
+            </header>
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
+                </div>
+            </div>
             <div class="row">
             <div class="col-xs-12">
             <h2>Contact Us</h2>
@@ -43,9 +47,10 @@
                 <p>140 Bovard Road (PO Box 53)</p>
                 <p>Bovard, PA 15619</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7601.458141925898!2d-79.50877985736332!3d40.31610890449267!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x20ed26e277605d5f!2sLaurel+Highlands+Presbyterian!5e0!3m2!1sen!2sus!4v1487166079276" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </div>
+                    </section>
                 </div>
-            </section>
+             </div>
+         </div>
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
     </body>
 </html>
