--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
            
             </div>
             </header>
-             <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
+                </div>
+            </div>
+
             <section>
                 <!--Create Banner Image with Waterfall-->
                 <div class="row">
