--- a/news.html
+++ b/news.html
@@ -12,18 +12,26 @@
 
     <body>
         <div class="container-fluid">
-             <div class="jumbotron">
-                <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
-            </div>
-            <nav>
-                <ul class="nav nav-tabs">
-                    <li role="presentation"><a href="index.html">Home</a></li>
-                    <li role="presentation"><a href="about.html">About Us</a></li>
-                    <li role="presentation" class="active"><a href="news.html">News and Events</a></li>
-                    <li role="presentation"><a href="contact-us.html">Contact Us</a></li>
-                </ul>
+            <header id="header" class="wrapper">
+            <div id="header-inner" class="inner">
+                <nav id="main-nav">
+                    <a href="index.html" class="main-nav-link">Home</a>
+                    <a href="about.html" class="main-nav-link">About Us</a>
+                    <a href="news.html" class="main-nav-link">News and Events</a>
+                    <a href="contact-us.html" class="main-nav-link">Contact Us</a>
             </nav>
-            <h2>Calendar of Events!</h2>
+           
+            </div>
+            </header>
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
+                </div>
+            </div>
+            <h2 class>Calendar of Events!</h2>
+            <p class="content-b">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
             </div>
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
     </body>
