Changed header and body alignment

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <div class="container">
-            <header id="header" class="wrapper">
+            <header class="wrapper navigation_header">
             <div id="header-inner" class="inner">
                 <nav id="main-nav">
                     <a href="index.html" class="main-nav-link">Home</a>
