--- a/index.html
+++ b/index.html
@@ -25,13 +25,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">About</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                          <li><a href="#">Worship</a></li>
-                          <li><a href="#">Beliefs</a></li>
-                          <li><a href="#">Community</a></li>
-                        </ul>
+                    <li><a href="#">News</a></li>
                     </li>
                       <li><a href="#">Contact</a></li>
                     </ul>
