--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
              </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">News</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="news.html">News</a></li>
                     </li>
-                      <li><a href="#">Contact</a></li>
+                      <li><a href="contact-us.html">Contact</a></li>
                     </ul>
                     </div>
                 </div>
@@ -35,7 +35,6 @@
               <div class="jumbotron">
                   <div class="container">
                        <h1>Welcome to Laurel Highlands Presbyterian Church</h1>
-                <p>Thank you for visiting our website. We are a community of Christ’s disciples seeking to worship and serve the Triune God in all areas of life.</p>
                   </div>
               </div>
 
