--- a/about.html
+++ b/about.html
@@ -11,18 +11,27 @@
     </head>
 
     <body>
-        <div class="container-fluid">
-             <header id="header" class="wrapper">
-            <div id="header-inner" class="inner">
-                <nav id="main-nav">
-                    <a href="index.html" class="main-nav-link">Home</a>
-                    <a href="about.html" class="main-nav-link">About Us</a>
-                    <a href="news.html" class="main-nav-link">News and Events</a>
-                    <a href="contact-us.html" class="main-nav-link">Contact Us</a>
+       <nav class="navbar navbar-inverse navbar-static-top">
+            <div class="container">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">Laurel Highlands Presbyterian Church</a>
+             </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                  <ul class="nav navbar-nav navbar-right">
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="news.html">News</a></li>
+                    </li>
+                      <li><a href="contact-us.html">Contact</a></li>
+                    </ul>
+                    </div>
+                </div>
             </nav>
-           
-            </div>
-            </header>
             <div class="row">
                 <div class="col-xs-12">
                     <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
