Update containers and navbar

--- a/about.html
+++ b/about.html
@@ -32,34 +32,35 @@
                     </div>
                 </div>
             </nav>
-            <div class="row">
-                <div class="col-xs-12">
-                    <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
+                    </div>
                 </div>
-            </div>
-              <div class="content-b"> 
-                <h2>About Us</h2> 
-                <section class="about-pca">
-                <p>Laurel Highlands Presbyterian Church is a congregation of the
-Presbyterian Church in America.</p>
-                <p>For more information about the PCA visit their <a href="http://www.pcanet.org" target="_">website</a>.</p>
-                </section>
+                <div class="content-b"> 
+                    <h2>About Us</h2> 
+                    <section class="about-pca">
+                    <p>Laurel Highlands Presbyterian Church is a congregation of the
+    Presbyterian Church in America.</p>
+                    <p>For more information about the PCA visit their <a href="http://www.pcanet.org" target="_">website</a>.</p>
+                    </section>
 
-                <section class="mission-statement">
-                    <h3>Brief Mission Statement:</h3> 
-                    <ul>
-                        <li>Proclaiming the Gospel</li>
-                        <li>Committed to the Lord Jesus Christ</li>
-                        <li>Ambassadors of His Kingdom</li>
-                    </ul>
+                    <section class="mission-statement">
+                        <h3>Brief Mission Statement:</h3> 
+                        <ul>
+                            <li>Proclaiming the Gospel</li>
+                            <li>Committed to the Lord Jesus Christ</li>
+                            <li>Ambassadors of His Kingdom</li>
+                        </ul>
 
-                    <p><strong>John 14:16</strong> Jesus said, "I am the way, the truth, and the life. No one comes to the Father except through Me."</p>
+                        <p><strong>John 14:16</strong> Jesus said, "I am the way, the truth, and the life. No one comes to the Father except through Me."</p>
 
-                    <p>Sunday School classes for all ages begin at 9:30 a.m.</p>
-                    <p>Worship begins at 10:45 a.m.</p>
-                    <p>Nursery is provided for children through age three.</p>
-                </section>
-                </div>
+                        <p>Sunday School classes for all ages begin at 9:30 a.m.</p>
+                        <p>Worship begins at 10:45 a.m.</p>
+                        <p>Nursery is provided for children through age three.</p>
+                    </section>
+                    </div>
             </div>
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
     </body>
