--- a/contact-us.html
+++ b/contact-us.html
@@ -32,6 +32,7 @@
                     </div>
                 </div>
             </nav>
+        <div class="container">
             <div class="row">
                 <div class="col-xs-12">
                     <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
@@ -54,7 +55,7 @@
                 <h3>We are located at:</h3>
                 <p>140 Bovard Road (PO Box 53)</p>
                 <p>Bovard, PA 15619</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7601.458141925898!2d-79.50877985736332!3d40.31610890449267!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x20ed26e277605d5f!2sLaurel+Highlands+Presbyterian!5e0!3m2!1sen!2sus!4v1487166079276" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7601.458141925898!2d-79.50877985736332!3d40.31610890449267!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x20ed26e277605d5f!2sLaurel+Highlands+Presbyterian!5e0!3m2!1sen!2sus!4v1487166079276" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </section>
                 </div>
              </div>
