--- a/news.html
+++ b/news.html
@@ -32,15 +32,16 @@
                     </div>
                 </div>
             </nav>
-            <div class="row">
-                <div class="col-xs-12">
-                    <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
+                    </div>
                 </div>
-            </div>
-            <h2 class>Calendar of Events!</h2>
-            <p class="content-b">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
+                <h2 class>Calendar of Events!</h2>
+                <p class="content-b">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
             </div>
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
     </body>
