--- a/about.html
+++ b/about.html
@@ -32,12 +32,10 @@
                     </div>
                 </div>
             </nav>
-            <div class="container">
+            <div class="container page-wrap">
                 <div class="row">
-                    <div class="col-xs-12">
-                        <h1 class="hero-banner">Laurel Highlands Presbyterian Church</h1>
-                    </div>
-                </div>
+                <div class="col-sm-12">
+               
                 <div class="content-b"> 
                     <h2>About Us</h2> 
                     <section class="about-pca">
@@ -54,14 +52,20 @@
                             <li>Ambassadors of His Kingdom</li>
                         </ul>
 
-                        <p><strong>John 14:16</strong> Jesus said, "I am the way, the truth, and the life. No one comes to the Father except through Me."</p>
+                        <p><b>John 14:16</b> Jesus said, "I am the way, the truth, and the life. No one comes to the Father except through Me."</p>
 
                         <p>Sunday School classes for all ages begin at 9:30 a.m.</p>
                         <p>Worship begins at 10:45 a.m.</p>
                         <p>Nursery is provided for children through age three.</p>
                     </section>
                     </div>
+                 </div>
             </div>
+        </div>
+            <footer class="main-footer">
+                <p>&#x24B8; Laurel Highlands Presbyterian Church</p>
+            </footer>
+
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
           <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </body>
