--- a/index.html
+++ b/index.html
@@ -34,33 +34,37 @@
             </nav>
               <div class="jumbotron">
                   <div class="container">
-                       <h1>Welcome to Laurel Highlands Presbyterian Church</h1>
+                       <h1>Laurel Highlands Presbyterian Church</h1>
                   </div>
               </div>
 
                    
 
         <section class="call-to-action">
-            <div class="container">
+            <div class="container page-wrap">
                 <div class="row">
                     <div class="col-md-4">
                         <span class="glyphicon glyphicon-grain glyphicon-large" aria-hidden="true"></span>
-                        <h3>Info about the Church</h3>
+                        <h3><a href="about.html">Info about the Church</a></h3>
                         <p>Here you will find information about our church, activities and ministries. For those who may be searching for a home church or visiting the Greensburg area, we hope this site will help you understand a little more about who we are and what we believe.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="glyphicon glyphicon-hourglass glyphicon-large" aria-hidden="true"></span>
-                        <h3>Services</h3>
+                        <h3><a href="contact-us.html">Services</a></h3>
                         <p>We welcome you to come and join us on the Lord’s Day as we worship the God of grace, and would consider it a privilege to meet you. Sunday School classes for adults, teenagers and children begin at 9:30 a.m. Worship begins at 10:45 a.m. and nursery is provided for children through age three.</p> 
                     </div>
                     <div class="col-md-4">
                         <span class="glyphicon glyphicon-phone-alt glyphicon-large" aria-hidden="true"></span>
-                        <h3>Get in Touch</h3>
+                        <h3><a href="contact-us.html">Get in Touch</a></h3>
                         <p>If you have any other questions, please feel free to <a href="contact-us.html">contact us</a>. We thank you again for visiting Laurel Highlands Presbyterian Church on the web.</p>
                      </div>
                 </div>
+                
             </div>
         </section>
+            <footer class="main-footer">
+                <p>&#x24B8; Laurel Highlands Presbyterian Church</p>
+            </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>        
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </body>
