Update submit button

--- a/contact-us.html
+++ b/contact-us.html
@@ -61,7 +61,7 @@
                         <label for="msg">Message:</label>
                         <textarea class="form-control" id="msg" name="user_message"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
+                        <button type="submit" class="btn btn-default sbtn">Submit</button>
                     </form>
                 </div>
 
@@ -76,7 +76,7 @@
                 </div>
                 </section>
          </div><!--.row-->
-         </div><!--.container -->
+       </div><!--.container -->
             <footer class="main-footer">
                 <p>&#x24B8; Laurel Highlands Presbyterian Church</p>
             </footer>
