--- a/singlepage.html
+++ b/singlepage.html
@@ -5,9 +5,16 @@
         <meta name="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Laurel Highlands Presbyterian Church</title>
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/one.css">
+        <style>
+             @import url('https://fonts.googleapis.com/css?family=Muli:300,400');
+             </style>
     </head>
         <body>
+            <header class="hero" id="header">
+                <h1>Laurel Highland Presbyterian Church</h1>
+            </header>
             <div id="main">
                 <div class="container clearfix">
                     <div id="sidebar">
