Update single page nav

--- a/singlepage.html
+++ b/singlepage.html
@@ -13,22 +13,22 @@
     </head>
         <body>
             <header class="hero" id="header">
+                <nav class="navbar">
+                    <ul class="nav-links">
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#news">News</a></li>
+                    </ul>
+                </nav>
                 <h1>Laurel Highland Presbyterian Church</h1>
             </header>
             <div id="main">
                 <div class="container clearfix">
                     <div id="sidebar">
                         <div id="nav-anchor"></div>
-                        <nav>
-                            <ul>
-                                <li><a href="#home">Home</a></li>
-                                <li><a href="#about">About</a></li>
-                                <li><a href="#contact">Contact</a></li>
-                                <li><a href="#news">News</a></li>
-                            </ul>
-                        </nav>
                     </div><!-- /sidebar -->
-                    <div id="content">
+                    <main id="content">
                         <section id="home">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                         </section>
@@ -45,7 +45,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                         </section>
 
-                    </div><!-- /#content -->
+                    </main><!-- /#content -->
                 </div><!-- /.container -->
             </div><!-- /#main -->
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>    
