--- a/singlepage.html
+++ b/singlepage.html
@@ -17,7 +17,7 @@
                     <ul class="nav-links">
                         <li><a href="#home">Home</a></li>
                         <li><a href="#about">About</a></li>
-                        <li><a href="#news">News</a></li>
+                        <li><a href="#news">News</a></li> 
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
@@ -48,28 +48,28 @@
                             <h3>Ways to Contact Us</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-                            <form action="#" method="post">
-                                <p>
-                                    <label for="message_title">Title:</label>
+                         <div>
+                            <form action="#" method="post" class="form-contact">
+                                <div>
+                                    <label for="message_title">Title</label>
                                     <input type="text" id="message_title" name="user_title">
-                                </p>
+                                </div>
 
-                                <p>
-                                    <label for="senders_email">Email:</label>
+                                <div>
+                                    <label for="senders_email">Email</label>
                                     <input type="email" id="senders_email" name="user_email">
-                                </p>
+                                </div>
 
-                                <p>
-                                    <label for="message_text">Message:</label>
+                                <div>
+                                    <label for="message_text">Message</label>
                                     <textarea id="message_text" name="user_message"></textarea>
-                                </p>
+                                </div>
 
-                                <p>
-                                    <button>Submit</button>
-                                </p>
+                                <div class="button-submit">
+                                    <button type="submit" id="contact-submit">Submit</button>
+                                </div>
                             </form>
-
+                          </div>
                         </section>
                     </main>
                 </div>
